# src/models/credentialLocation.model.ts
@@ -1,0 +1,9 @@
+export interface CredentialLocation {
+  credentialId: string;
+  locationId: string;
+}
+
+export interface CreateCredentialLocationDTO {
+  credentialId: string;
+  locationId: string;
+}
